@@ -26,6 +26,11 @@ sourceSets {
 			srcDir 'src/res'
 		}
 	}
+	test {
+		java {
+			srcDir 'src/test'
+		}
+	}
 }
 
 repositories {
@@ -35,6 +40,9 @@ repositories {
 dependencies {
 	compile 'org.apache.commons:commons-math3:3.2'
 	compile project(':lib')
+
+	testCompile 'com.google.truth:truth:0.30'
+	testCompile 'junit:junit:4.12'
 }
 
 processResources.dependsOn 'updateVersionString'
